--- a/modal.html
+++ b/modal.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 <body>
-    <div id="modal-overlay">
+    <!-- 會員登入/註冊視窗 -->
+    <!-- <section id="modal-overlay" class="account modalHidden">
         <div class="container">
             <div id="modal-content"  class="row">
                 <div class="close-btn">
@@ -57,7 +58,71 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section> -->
+    <!-- 導覽服務 -->
+    <section id="tour-guide" class="modal-overlay tour-guide">
+        <div class="container">
+            <div class="modal-content row">
+                <div class="close-btn">
+                    <span></span>
+                    <span></span>
+                </div>
+                <h2 class="h3-ch">導覽服務</h2>
+                <p class="p2">幫助您快速尋找到您需要的服務內容</p>
+                <div class="col-12 cards-group">
+                    <a href="student.html" class="reveal-item">
+                        <div class="card pink">
+                            <span class="material-symbols-outlined arrow">north_east</span>
+                            <div class="card-content">
+                                <span class="material-symbols-outlined">menu_book</span>
+                                <h4 class="h4-ch">兒童與青少年專區</h4>
+                                <span class="h3-eg">Kid & Teenager</span>
+                                <div class="btn-sm-group ">
+                                    <div class="btn-sm">好書推薦</div>
+                                    <div class="btn-sm">主題活動</div>
+                                    <div class="btn-sm">親子共讀</div>
+                                    <div class="btn-sm">學習資源</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="advanced-course.html" class="reveal-item">
+                        <div class="card orange">
+                        <span class="material-symbols-outlined arrow">north_east</span>
+                        <div class="card-content">
+                            <span class="material-symbols-outlined">flag</span>
+                            <h4 class="h4-ch">研究與進修專區</h4>
+                            <span class="h3-eg">Advanced Course</span>
+                            <div class="btn-sm-group ">
+                                <div class="btn-sm">好書推薦</div>
+                                <div class="btn-sm">期刊論文</div>
+                                <div class="btn-sm">職場理財</div>
+                                <div class="btn-sm">研習課程</div>
+                            </div>
+                        </div>
+                    </div>
+                    </a>
+                    <a href="senior.html" class="reveal-item">
+                        <div class="card purple">
+                            <span class="material-symbols-outlined arrow">north_east</span>
+                            <div class="card-content">
+                                <span class="material-symbols-outlined">person_play</span>
+                                <h4 class="h4-ch">樂齡學習專區</h4>
+                                <span class="h3-eg">Senior Learning</span>
+                                <div class="btn-sm-group ">
+                                    <div class="btn-sm">好書推薦</div>
+                                    <div class="btn-sm">主題活動</div>
+                                    <div class="btn-sm">親子共讀</div>
+                                    <div class="btn-sm">學習資源</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <img src="./images/library-logo.png" alt="公共圖書館">
+            </div>
+        </div>
+    </section>
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- scroll reveal -->
