--- a/student.html
+++ b/student.html
@@ -21,7 +21,7 @@
         <nav class="nav-bar">
             <div class="container nav">
                 <div class="logo">
-                    <img src="images/library-logo.png" alt="公共圖書館">
+                    <a href="index.html"><img src="images/library-logo.png" alt="公共圖書館"></a>
                 </div>
                 <div class="page-btn">
                     <ul>
@@ -33,12 +33,133 @@
                         <li><a href="contact.html">聯絡我們</a></li>
                     </ul>
                     <div class="btn-group">
-                        <a href="#" class="little-btn yellow">導覽服務</a>
-                        <a href="#"class="little-btn green"><span class="material-symbols-outlined">login</span>我的帳戶</a>
+                        <a href="#" class="little-btn yellow" id="tour-guide-btn">導覽服務</a>
+                        <a href="#"class="little-btn green" id="account-btn"><span class="material-symbols-outlined">login</span>我的帳戶</a>
                     </div>
                 </div>
             </div>
-        </nav>
+        </nav><!-- 字體縮放按鈕 -->
+        <div class="font-scale">
+            <p>字體</p>
+            <button class="p1" data-size="small">小</button>
+            <button class="p1 active" data-size="medium">中</button>
+            <button class="p1" data-size="large">大</button>
+        </div>
+        <!-- 會員註冊登入視窗 -->
+        <section id="account" class="account modal-overlay modalHidden">
+            <div class="container">
+                <div class="modal-content row">
+                    <div class="close-btn">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-panel" id="signup-panel">
+                            <span class="h2-eg-medium">Sing up</span>
+                            <h2 class="h5-ch">註冊帳號</h2>
+                            <form action="">
+                                <label for="" class="p2">帳號
+                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                                <label for="" class="p2">密碼
+                                <input type="password" placeholder="請輸入密碼"></label>
+                                <label for="" class="p2">確認密碼
+                                <input type="password" placeholder="請再次輸入密碼"></label>
+                                <button type="submit" class="little-btn green-line btn-sm">註冊帳號</button>
+                                <div id="switch-login">
+                                    <p class="p2">已經有帳號了嗎?</p>
+                                    <a href="#" class="p2">我要登入<span class="material-symbols-outlined">arrow_right_alt</span></a>
+                                    
+                                </div>
+                            </form>
+                            <img src="images/pop-up-window/signup.png" alt="signup image">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-panel" id="login-panel">
+                            <span class="h2-eg-medium">Login</span>
+                            <h2 class="h5-ch">登入帳號</h2>
+                            <form action="">
+                                <label for="" class="p2">帳號
+                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                                <label for="" class="p2">密碼
+                                <input type="password" placeholder="請輸入密碼"></label>
+                                <a href="#" class="p2 forget">忘記密碼?</a>
+                                <button type="submit" class="little-btn green-line btn-sm">登入</button>
+                                <div id="switch-signup">
+                                    <a href="#" class="p2"><span class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號</a>
+                                    <p class="p2">您還沒有帳號嗎?</p>
+                                </div>
+                            </form>
+                            <img src="images/pop-up-window/login.png" alt="login image" class="imgHidden">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- 導覽服務 -->
+        <section id="tour-guide" class="modal-overlay tour-guide modalHidden">
+                <div class="container">
+                    <div class="modal-content row">
+                        <div class="close-btn">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <h2 class="h3-ch">導覽服務</h2>
+                        <p class="p2">幫助您快速尋找到您需要的服務內容</p>
+                        <div class="col-12 cards-group">
+                            <a href="student.html" class="reveal-item">
+                                <div class="card pink">
+                                    <span class="material-symbols-outlined arrow">north_east</span>
+                                    <div class="card-content">
+                                        <span class="material-symbols-outlined">menu_book</span>
+                                        <h4 class="h4-ch">兒童與青少年專區</h4>
+                                        <span class="h3-eg">Kid & Teenager</span>
+                                        <div class="btn-sm-group ">
+                                            <div class="btn-sm">好書推薦</div>
+                                            <div class="btn-sm">主題活動</div>
+                                            <div class="btn-sm">親子共讀</div>
+                                            <div class="btn-sm">學習資源</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="advanced-course.html" class="reveal-item">
+                                <div class="card orange">
+                                <span class="material-symbols-outlined arrow">north_east</span>
+                                <div class="card-content">
+                                    <span class="material-symbols-outlined">flag</span>
+                                    <h4 class="h4-ch">研究與進修專區</h4>
+                                    <span class="h3-eg">Advanced Course</span>
+                                    <div class="btn-sm-group ">
+                                        <div class="btn-sm">好書推薦</div>
+                                        <div class="btn-sm">期刊論文</div>
+                                        <div class="btn-sm">職場理財</div>
+                                        <div class="btn-sm">研習課程</div>
+                                    </div>
+                                </div>
+                            </div>
+                            </a>
+                            <a href="senior.html" class="reveal-item">
+                                <div class="card purple">
+                                    <span class="material-symbols-outlined arrow">north_east</span>
+                                    <div class="card-content">
+                                        <span class="material-symbols-outlined">person_play</span>
+                                        <h4 class="h4-ch">樂齡學習專區</h4>
+                                        <span class="h3-eg">Senior Learning</span>
+                                        <div class="btn-sm-group ">
+                                            <div class="btn-sm">好書推薦</div>
+                                            <div class="btn-sm">主題活動</div>
+                                            <div class="btn-sm">親子共讀</div>
+                                            <div class="btn-sm">學習資源</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <img src="./images/library-logo.png" alt="公共圖書館">
+                    </div>
+                </div>
+        </section>
         <section class="title-area pink">
             <div class="container">
                 <div class="row">
@@ -64,12 +185,7 @@
             </div>
             <img src="images/bg/tour-guide-pink01.png" alt="tour-guide-pink">
         </section>
-        <div class="font-scale">
-            <p>字體</p>
-            <button class="p1" data-size="small">小</button>
-            <button class="p1 active" data-size="medium">中</button>
-            <button class="p1" data-size="large">大</button>
-        </div>
+        
     </header>
     <main>
         <section class="label">
@@ -102,8 +218,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books01.png" alt="student-books01">
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname p1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
+                            <div class="tag p2">2022台北國際書展大獎「兒童及青少年獎」首獎</div>
+                            <div class="bookname p1">中小學生經濟生活觀察日記：時間和金錢有限...</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
@@ -113,8 +229,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books02.png" alt="student-books02">
                         <div class="detail">
-                            <div class="tag p2">日本小說</div>
-                            <div class="bookname p1">罪惡的終結</div>
+                            <div class="tag p2">2022台北國際書展大獎「兒童及青少年獎」首獎</div>
+                            <div class="bookname p1">我的同學是一隻熊</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
@@ -124,8 +240,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books03.png" alt="student-books03">
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname p1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
+                            <div class="tag p2">2022台北國際書展大獎「非小說獎」首獎</div>
+                            <div class="bookname p1">真相製造：從聖戰士媽媽、極權政府、網軍教練、...</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
@@ -135,8 +251,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books04.png" alt="student-books04">
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname p1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
+                            <div class="tag p2">2022台北國際書展大獎「非小說獎」首獎</div>
+                            <div class="bookname p1">神在的地方：一個與雪同行的夏天</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
@@ -148,8 +264,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books05.png" alt="student-books05">
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname p1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
+                            <div class="tag p2">2022台北國際書展大獎「非小說獎」首獎</div>
+                            <div class="bookname p1">神在的地方：一個與雪同行的夏天</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
@@ -159,8 +275,8 @@
                     <div class="col-3 books-list reveal-item">
                         <img src="images/books/student-books06.png" alt="student-books06">
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname p1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
+                            <div class="tag p2">2022台北國際書展大獎「小說獎」首獎</div>
+                            <div class="bookname p1">親愛的共犯</div>
                             <a class="little-btn collect">
                                 <i class="fa-solid fa-heart"></i>
                                 加入收藏
