導覽彈窗背景連結修改

--- a/advanced-course.html
+++ b/advanced-course.html
@@ -158,6 +158,7 @@
                             </a>
                         </div>
                         <img src="./images/library-logo.png" alt="公共圖書館">
+                        <img src="./images/pop-up-window/tour-guide.png" alt="tour-guide">
                     </div>
                 </div>
         </section>
